--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ankit7458/Real-estate-0.1#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
 }
